# pcg_gazebo_pkgs

./: .travis.yml  3rd-party-licenses.txt  README.md
pcg_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
pcg_examples/config/: box_factory_lambda_args.yaml  cylinder_dynamic_model.yaml  cylinder_factory_fixed_args.yaml  cylinder_factory_lambda_args.yaml  cylinder_static_model.yaml  mesh_dynamic_model.yaml  mesh_static_model.yaml  sphere_static_model.yaml
pcg_examples/config/model_factory/: box_dynamic_model.yaml  box_factory_fixed_args.yaml  box_static_model.yaml  hinged_doors_from_mesh.yaml  mesh_dynamic_model.yaml  mesh_static_model.yaml  sphere_dynamic_model.yaml  sphere_factory_fixed_args.yaml  sphere_factory_lambda_args.yaml
pcg_examples/config/model_generators/: full_crate.yml
pcg_examples/config/world_generator/worlds/: bouncing_balls_ode.yml  empty_world_bullet.yml  empty_world_ode.yml  full_crates_ode.yml  random_workspaces_ode.yml
pcg_examples/launch/: start_world.launch
pcg_examples/models/: README.md
pcg_examples/models/model_factory/pcg_door_LHR_from_mesh_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LHR_from_mesh_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LHR_from_primitives_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LHR_from_primitives_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LH_from_mesh_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LH_from_mesh_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LH_from_primitives_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_LH_from_primitives_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RHR_from_mesh_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RHR_from_mesh_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RHR_from_primitives_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RHR_from_primitives_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RH_from_mesh_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RH_from_mesh_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RH_from_primitives_no_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_door_RH_from_primitives_with_frame/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_monkey_dynamic_no_approx_collision/: model.config  model.sdf
pcg_examples/models/model_factory/pcg_monkey_dynamic_with_approx_collision_box/: model.config  model.sdf
pcg_examples/models/pcg_bouncy_ball/: model.config  model.sdf
pcg_examples/scripts/: gen_model_from_factory_config  gen_model_from_template  generate_gazebo_models_from_templates  generate_pcg_world_files  launch_pcg_world  spawn_model_from_factory_config
pcg_examples/templates/models/: pcg_bouncy_ball.sdf.jinja
pcg_examples/test/: test_model_factory_examples.py  test_template_examples.py  test_world_gen_examples.py
pcg_examples/worlds/: bouncing_balls_ode.world  empty_world_bullet.world  empty_world_ode.world  full_crates_ode.world  random_workspaces_ode.world
pcg_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pcg_gazebo/cmake/: check_sdf.cmake  check_urdf.cmake  generate_model_from_config.cmake  generate_world_from_config.cmake  jinja2gazebo_model.cmake  jinja2sdf.cmake  pcg_gazebo-extras.cmake.em  pcg_utils.cmake
pcg_gazebo/launch/: gazebo2tf.launch  generate_model_description.launch  generate_pcg_world.launch  generate_world.launch  start_generated_gazebo_world.launch  start_simulation_builder.launch
pcg_gazebo/rviz/: world_builder.rviz
pcg_gazebo/scripts/: gazebo2tf  generate_model_description  generate_occupancy_map  generate_pcg_world  generate_world  process_jinja_template  run_model_factory  sdf2urdf  sdflint  simulation_builder_server  spawn_sdf_model  start_gazebo_world  urdf2sdf  urdflint  view_gazebo_model  view_mesh
pcg_gazebo/templates/: world.sdf.jinja
pcg_libraries/: CHANGELOG.rst  CMakeLists.txt  _create_env.py  package.xml  requirements.txt  setup.py
pcg_libraries/launch/: empty_world_with_timer.launch  start_pcg_simulation_server.launch
pcg_libraries/scripts/: get_list_of_joints  set_random_joint_positions  simulation_timer
pcg_libraries/sdf/: gazebo_ros_plugins.sdf.jinja  models.sdf.jinja  physics.sdf.jinja  worlds.sdf.jinja
pcg_libraries/src/pcg_gazebo/: __init__.py  log.py  path.py  utils.py  visualization.py
pcg_libraries/templates/: world.sdf.jinja
pcg_libraries/test/: test_assets_manager.py  test_collision_checker.py  test_engine_and_constraint_managers.py  test_inertia.py  test_jinja_sdf_file_generation.py  test_jinja_sdf_file_generation.test  test_load_yaml.py  test_mesh_property.py  test_model_factory.py  test_model_group.py  test_model_group_generator.py  test_parse_sdf.py  test_parser_urdf.py  test_pose.py  test_resolve_paths.py  test_sdf_parser.py  test_sdf_parser.test  test_simulation_objects.py  test_simulation_objects.test  test_urdf_parser.py  test_urdf_parser.test  test_world_generator.py
pcg_libraries/test/jinja_sdf/: cuboid_inertia.jinja  ellipsoid_inertia.jinja  ellipsoid_inertia.sdf  hollow_sphere_inertia.jinja  inertia_solid_sphere.jinja  physics_default.jinja  physics_ode.jinja  solid_cylinder_inertia_axis_x.jinja  solid_cylinder_inertia_axis_y.jinja  solid_cylinder_inertia_axis_z.jinja
pcg_libraries/test/urdf/: kobuki.urdf
pcg_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pcg_msgs/msg/: BulletPhysics.msg  JointProperties.msg  SimbodyPhysics.msg
pcg_msgs/srv/: GetJointPosition.srv  GetJointProperties.srv  GetPhysicsEngineName.srv  GetPhysicsIntProperty.srv  GetPhysicsProperties.srv  GetPhysicsProperty.srv  SetGlobalPhysicsProperties.srv  SetJointPosition.srv  SetJointProperties.srv  SetPhysicsProperties.srv  SetPhysicsProperty.srv
(+269 files in other folders)
