<?xml version="1.0"?>
<package format="2">
  <name>pcg_gazebo</name>
  <version>0.0.0</version>
  <description>Scripts to run the PCG library</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>pcg_libraries</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python-jinja2</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-simplejson</exec_depend>
  <exec_depend>pcg_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
