<?xml version="1.0"?>
<package format="2">
  <name>pcg_gazebo</name>
  <version>0.3.1</version>
  <description>Scripts to run the PCG library</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>  

  <depend>python3-pcg-gazebo-pip</depend>


  <build_export_depend>rosbash</build_export_depend>
  <build_export_depend>rospack</build_export_depend>

  <test_depend>roslaunch</test_depend>
</package>
