<?xml version="1.0"?>
<package format="2">
  <name>pcg_libraries</name>
  <version>0.1.2</version>
  <description>
    Python libraries that include features as URDF and SDF format parsing and conversion,
    abstraction of simulation entities as Python data structures, process manager for 
    launching staged tasks subject to events.  
  </description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-lxml</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-xmltodict</exec_depend>
  <exec_depend>python-psutil</exec_depend>
  <exec_depend>python-jinja2</exec_depend>
  <exec_depend>python-shapely</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-shapely</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-pip</exec_depend>
  <exec_depend>python-networkx</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>libxml2-utils</exec_depend>
  <exec_depend>blender</exec_depend>
  <exec_depend>libfcl-dev</exec_depend>
  <exec_depend>geos</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
      <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
