<?xml version="1.0"?>
<package format="2">
  <name>pcg_msgs</name>
  <version>0.2.0</version>
  <description>Definition of messages and services for the PCG project</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
